# fuse

./: .env  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  backend_pre_start.py  celerybeat-schedule-shm  celerybeat-schedule-wal  credentials_storage.json  docker-compose.yml  initial_data.py  main.py  node_registry.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  start-guide.md
.claude/: settings.json
.claude/rules/: database.md  frontend.md  security.md
.github/workflows/: build-publish.yml  ci.yml  deploy.yml  publish-to-pypi.yml  release.yml
alembic/: env.py
alembic/versions/: 1439949b74ad_add_edge_handles.py  82e10e9b2e3f_add_spec_column_to_workflownode_and_.py  dd21742ef7b0_add_execution_models.py
antigravity_bridge/: package.json  server.js
apps/api/: alembic.ini  entrypoint.sh  pyproject.toml
apps/site/: Dockerfile  README.md  package.json  pnpm-lock.yaml
apps/web/: Caddyfile  Dockerfile  components.json  index.html  package.json  tailwind.config.cjs  tsconfig.app.json  vite.config.ts
apps/web_v2/: package.json
apps/worker/: pyproject.toml
deploy/: .env.production.example  backup.sh  bootstrap-vps.sh  deploy.sh  docker-compose.production.yml  restore.sh
docs/: README.md  architecture.md  copilot-workflow-generation.md  deploy.md  development.md  devops-plan.md  google-plan.md  loop-engineering-plan.md  meta-setup.md  meta-testing.md  pypi_publishing_guide.md  secrets.md
docs/project-plan/: phase-10-more-nodes.md
fuse/: api.py  backend_pre_start.py  cli.py  config.py  database.py  initial_fuse.db  logger.py  main.py  models.py  worker.py
fuse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
fuse/ai/: antigravity.py  cliproxy_manager.py  router.py  service.py
fuse/alembic/: env.py
fuse/auth/: __init__.py  crud_user.py  dependencies.py  models.py  router.py  schemas.py  service.py  utils.py
fuse/credentials/: models.py  router.py  service.py
fuse/datatables/: models.py  router.py  schemas.py  service.py
fuse/events/: service.py
fuse/items/: __init__.py  crud_item.py  models.py  router.py  schemas.py  service.py
fuse/nodes/: router.py  schemas.py  service.py
fuse/plugins/: registry.py  router.py  schemas.py  service.py
fuse/static/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  fallback-build-manifest.json  index.html  index.txt  prerender-manifest.json  trace  trace-build
fuse/users/: router.py
node_packages/: README.md
scripts/: batch_migrate_all.py  dev.sh  migrate_node.py
src/: base.py  cli.py  database.py  logger.py  main.py  models.py  worker.py
tests/: test_node_system.py
(+1309 files in other folders)
